--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								</ul>
 							</p>
 							<p class="texto04">
-								21 de outubro de 2024: Espaços Vetoriais.
+								26 de outubro de 2024: Instrução Java.
 							</p>
 							<p class="texto04">
 								<a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
