--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,7 @@
                       			<a href="https://www.instagram.com/andarilhou/" class="btn btn-light" target="_blank">Instagram</a>
                       			<a href="https://discord.com/channels/302563407381528576/302563407381528576" class="btn btn-light" target="_blank">Discord</a> <br><br>
                       			<a href="https://bit.ly/3BygtDQ" class="btn btn-light" target="_blank">Setup</a>
+								<a href="https://www.youtube.com/embed/videoseries?list=PLd9ykfMeym3iO_96D12Rdx_qS7il5xqGF" class="btn btn-light" target="_blank">Andarilhoteca</a>
 							</p> <hr>
 							<p class="texto04">
 								Setup Completo
