--- a/index.html
+++ b/index.html
@@ -96,15 +96,11 @@
 								</ul>
 							</p>
 							<p class="texto04">
-								26 de outubro de 2024: Instrução Java.
+								11 de novembro de 2024: Álgebra Linear - Transformações Lineares.
 							</p>
 							<p class="texto04">
 								<a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
 								<a href="https://chat.openai.com/" class="btn btn-light" target="_blank">ChatGPT</a> <br> <br>
-							</p> <hr>
-							<p class="texto04">
-								Aprendendo matemática: <br><br>
-								<a href="https://youtube.com/playlist?list=PLTPg64KdGgYhYpS5nXdFgdqEZDOS5lARB&si=7JqDvtFcHsBBgHEf" class="btn btn-light" target="_blank">Playlist</a>
 							</p> <hr>
 							<p class="texto04">
 								Este conhecimento é crucial para a criação de soluções inovadoras e eficientes, preparando os estudantes para 
