--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
 								</ul>
 							</p>
 							<p class="texto04">
-								11 de novembro de 2024: Álgebra Linear - Transformações Lineares.
+								19 de novembro de 2024: Em busca da Matemática avançada.
 							</p>
 							<p class="texto04">
 								<a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
 								<a href="https://chat.openai.com/" class="btn btn-light" target="_blank">ChatGPT</a> <br> <br>
+								<a href="https://www.youtube.com/playlist?list=PLTPg64KdGgYhYpS5nXdFgdqEZDOS5lARB" title="Matemática Básica - 2024 (Curso Completo)" class="btn btn-light" target="_blank">Math-01</a>
 							</p> <hr>
 							<p class="texto04">
 								Este conhecimento é crucial para a criação de soluções inovadoras e eficientes, preparando os estudantes para 
