--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
 									  <div class="carousel-item">
 										<img src="assets/img/carousel/blsk/03.jpg" class="d-block w-100" alt="...">
 									  </div>
+									  <div class="carousel-item">
+										<img src="https://i.imgur.com/V4f7lVI.jpg" class="d-block w-100" alt="...">
+									  </div>
+									  <div class="carousel-item">
+										<img src="https://i.imgur.com/9dapejh.jpg" class="d-block w-100" alt="...">
+									  </div>
 									  <div class="carousel-item active">
 										<img src="assets/img/carousel/01.jpg" class="d-block w-100" alt="...">
 										<div class="carousel-caption d-none d-md-block">
@@ -218,6 +224,8 @@
 										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="3" class="active" aria-current="true" aria-label="Slide 4"></button>
 										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="4" aria-label="Slide 5"></button>
 										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="5" aria-label="Slide 6"></button>
+										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="6" aria-label="Slide 7"></button>
+										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="7" aria-label="Slide 8"></button>
 									</div>
 								</div> <br> <br>
 								<p class="texto04">
