--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,7 @@
 							</p> <hr>
 							<p class="texto04">
 								<a href="https://www.youtube.com/playlist?list=WL" class="btn btn-light" target="_blank">Watch Later</a>
+								<a href="https://www.youtube.com/feed/playlists" class="btn btn-light" target="_blank">All-Playlists</a>
 							</p> <hr>
 							<p class="texto04 text-center">
 								Fim.
