--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
 							</p>
 							<p class="texto04">
 								<a href="https://mail.google.com/mail/u/0/#inbox" class="btn btn-light" target="_blank">Gmail</a>
+								<a href="https://www.instagram.com/" class="btn btn-light" target="_blank">Instagram</a>
 							</p>
 							<p class="texto04">
 								Objetivos: <br> 
