--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 								<a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
 								<a href="https://chat.openai.com/" class="btn btn-light" target="_blank">ChatGPT</a> <br> <br>
 								<a href="https://www.youtube.com/playlist?list=PLTPg64KdGgYhYpS5nXdFgdqEZDOS5lARB" title="Matemática Básica - 2024 (Curso Completo)" class="btn btn-light" target="_blank">Math-01</a>
+								<a href="https://www.udemy.com/course-dashboard-redirect/?course_id=1694986" title="Ruby on Rails 5.x - Do início ao fim!" class="btn btn-light" target="_blank">Udemy-01</a>
 							</p> <hr>
 							<p class="texto04">
 								Este conhecimento é crucial para a criação de soluções inovadoras e eficientes, preparando os estudantes para 
