--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
 						<div class="card h-100 video00">
 						  <div class="card-body p-0">
 							<h1 class="card-subtitle text-light">Lancer</h1>
-							<p class="card-text text-warning">Eficiência, otimização, funcionalidade.</p>
+							<p class="card-text text-warning">Otimização com estilo.</p>
 							<img class="img02" src="assets/img/cards/c10.jpg"> <br> <br>
 							<p class="texto04">
 								<img align="left" class="img01" src="assets/img/p04.jpg">
