--- a/index.html
+++ b/index.html
@@ -1031,15 +1031,15 @@
 								sobrevivência, tornando minha experiência ainda mais emocionante e gratificante.
 							</p>
 							<p class="texto04">
-								<a href="https://www.youtube.com/embed/videoseries?list=PLd9ykfMeym3jCU5tCFLXjZbMg4GY-u2EZ" class="btn btn-light" target="_blank">Playlist</a>
-                      			<a href="https://www.youtube.com/@Andarilhou/videos" class="btn btn-light" target="_blank">Canal</a>
-                      			<a href="https://www.twitch.tv/andarilhoo" class="btn btn-light" target="_blank">Twitch</a> <br><br>
-                      			<a href="https://www.youtube.com/@livesdoandarilho" class="btn btn-light" target="_blank">Canal de lives</a>
-                     			<a href="https://www.instant-gaming.com/pt/giveaway/andarilho" class="btn btn-light" target="_blank">Giveway</a> <br><br>
-                      			<a href="https://www.instagram.com/andarilhou/" class="btn btn-light" target="_blank">Instagram</a>
-                      			<a href="https://discord.com/channels/302563407381528576/302563407381528576" class="btn btn-light" target="_blank">Discord</a> <br><br>
-                      			<a href="https://bit.ly/3BygtDQ" class="btn btn-light" target="_blank">Setup</a>
-								<a href="https://www.youtube.com/embed/videoseries?list=PLd9ykfMeym3iO_96D12Rdx_qS7il5xqGF" class="btn btn-light" target="_blank">Andarilhoteca</a>
+								<a href="https://www.youtube.com/embed/videoseries?list=PLd9ykfMeym3jCU5tCFLXjZbMg4GY-u2EZ" class="btn btn-light">Playlist</a>
+								<a href="https://www.youtube.com/@Andarilhou/videos" class="btn btn-light">Canal</a>
+								<a href="https://www.twitch.tv/andarilhoo" class="btn btn-light">Twitch</a> <br><br>
+								<a href="https://www.youtube.com/@livesdoandarilho" class="btn btn-light">Canal de lives</a>
+								<a href="https://www.instant-gaming.com/pt/giveaway/andarilho" class="btn btn-light">Giveway</a> <br><br>
+								<a href="https://www.instagram.com/andarilhou/" class="btn btn-light">Instagram</a>
+								<a href="https://discord.com/channels/302563407381528576/302563407381528576" class="btn btn-light">Discord</a> <br><br>
+								<a href="https://bit.ly/3BygtDQ" class="btn btn-light">Setup</a>
+								<a href="https://www.youtube.com/embed/videoseries?list=PLd9ykfMeym3iO_96D12Rdx_qS7il5xqGF" class="btn btn-light">Andarilhoteca</a>
 							</p> <hr>
 							<p class="texto04">
 								Setup Completo
@@ -1073,8 +1073,8 @@
 								anos. Estou sempre ansioso pelos novos vídeos e continuo sendo um grande fã do Max!
 							</p>
 							<p class="texto04">
-								<a href="https://www.youtube.com/embed/videoseries?list=PLd9ykfMeym3iMo46vjAbQ67MMn2SeOHfx" class="btn btn-light" target="_blank">Playlist</a>
-                      			<a href="https://www.youtube.com/@MaxMRM/videos" class="btn btn-light" target="_blank">Canal</a>
+								<a href="https://www.youtube.com/embed/videoseries?list=PLd9ykfMeym3iMo46vjAbQ67MMn2SeOHfx" class="btn btn-light">Playlist</a>
+								<a href="https://www.youtube.com/@MaxMRM/videos" class="btn btn-light">Canal</a>
 							</p> <hr>
 							<p class="texto04">
 								<ul>
