--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<ul class="dropdown-menu projetos00">
 						  <li><a class="dropdown-item text-white itemMenu00" href="#facul1">01 - Faculdade</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#blsk1">02 - BLSK</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#gti1">03 - GTI</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#gti1">03 - VÁZIO</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#ing1">04 - Inglês</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#dig1">05 - Digitação</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#out1">06 - Outros</a></li>
