--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						  <li><a class="dropdown-item text-white itemMenu00" href="#blsk1">02 - BLSK</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#gti1">03 - VÁZIO</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#ing1">04 - VÁZIO</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#dig1">05 - Digitação</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#out1">06 - Outros</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#dig1">05 - VÁZIO</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#out1">06 - VÁZIO</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#poe1">07 - Poesias</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#dia1">08 - Diário</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#tex1">09 - Texto</a></li>
