--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						  <li><a class="dropdown-item text-white itemMenu00" href="#ing1">04 - VÁZIO</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#dig1">05 - VÁZIO</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#out1">06 - VÁZIO</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#poe1">07 - Poesias</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#dia1">08 - Diário</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#poe1">07 - VÁZIO</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#dia1">08 - VÁZIO</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#tex1">09 - Texto</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#kon1">10 - Konga</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" href="#lan1">11 - Lancer</a></li>
